# BackEndServiceBoilerPlate

./: .gitignore  README.md  install.cmd  pyproject.toml  run.cmd
core/: settings.py  urls.py
reviews/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_handshaketoken.py
trial/: test_api.py
